force-app/main/default/objects/openq__Company_Contacts__c/openq__Company_Contacts__c.object-meta.xml
<CustomObject>
    <label>Company Contact</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Company Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>