force-app/main/default/objects/openq__Company_Contacts__c/fields/openq__Company_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Company_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KOLContactsManagement</relationshipName>
    <type>Lookup</type>
</CustomField>