force-app/main/default/objects/openq__Company_Contacts__c/fields/openq__Contact__c.field-meta.xml
<CustomField>
    <fullName>openq__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Company Contacts</relationshipLabel>
    <relationshipName>CompanyContacts</relationshipName>
    <type>Lookup</type>
</CustomField>