force-app/main/default/objects/openq__Company_Contacts__c/fields/openq__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>openq__Contact_Phone__c</fullName>
    <formula>IF(openq__Company_Contact_Name__r.Phone != null, openq__Company_Contact_Name__r.Phone, IF(openq__Non_Salesforce_Company_Contact_Phone__c != null, openq__Non_Salesforce_Company_Contact_Phone__c, &apos;&apos;))</formula>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>