force-app/main/default/objects/openq__Company_Contacts__c/fields/openq__CreatedByUser__c.field-meta.xml
<CustomField>
    <fullName>openq__CreatedByUser__c</fullName>
    <formula>IF(openq__Company_Contact_Name__r.Id  = $User.Id , 1, 0)</formula>
    <label>Created By User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>