force-app/main/default/objects/openq__Company_Contacts__c/validationRules/openq__Valid_Company_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>openq__Valid_Company_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISBLANK( openq__Company_Contact_Name__c),
        ISBLANK( openq__Non_Salesforce_User_Company_Contact__c ) 
    ),

    AND(
        NOT(ISBLANK(openq__Company_Contact_Name__c)),
        NOT(ISBLANK(openq__Non_Salesforce_User_Company_Contact__c ))
    )
)</errorConditionFormula>
    <errorMessage>Select either Company Contact or Non Salesforce Company Contact</errorMessage>
</ValidationRule>