force-app/main/default/objects/openq__Company_Contacts__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>NAME</columns>
    <columns>openq__Company_Contact_Name__c</columns>
    <columns>openq__Contact__c</columns>
    <columns>openq__ContactId_and_UserId__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>